# sqlite-extension-pack

./: .gitattributes  .gitignore  cmake_build.cmd  cmake_build_all.cmd  cmake_build_all.sh  cmake_build_msvc.cmd  cmake_configure.test.cmd  cmake_configure_all.sh  cmake_configure_msvc.cmd  cmake_test_all.sh  cmake_test_msvc.cmd
src/: .gitignore  Borland.cmake  CMakeLists.txt  CMakePresets.json  MSVC.cmake  TODO.md  build-bcc.cmd  clean-bcc.cmd  extension-functions.c  extension-soundex.c  lua-bcc.def  makefile.bcc  makefile.bcc102  sqlite_util.cmake  stdint.h
src/dependencies/: .gitignore
src/official/: .gitattributes  CMakeLists.txt  rot13.c  series.c  stmt-bcc.def  stmt.c
src/pcre/: .gitignore  CMakeLists.txt  README.md  pcre-git.patch  sqlite3-pcre.def  sqlite3-pcre.patch
src/sqlite-lua/: .gitignore  CMakeLists.txt
src/sqlite-test-cli/: .gitattributes  CMakeLists.txt  mkopt.sh  sqlite3.linux.options  sqlite3.x64.options  sqlite3.x86.options
src/tests/: .gitignore  performance.cmd  performance.py  performance.sql  run.cmd  run.sh  run_x64.cmd  select.cmd  soundex_performance.py  test-extension-functions.sql  test-lua.sql  test-pcre.sql  test-rot13.sql  test-series.sql  test-stmt.sql  test-tjutil-bcc.sql  test-tjutil.sql  tests.sql
src/tjutil/: CMakeLists.txt  tjutil-bcc.def  tjutil.c  tjutil.vcxproj  tjutil.vcxproj.filters  tryme.cmd  tryme.sql
